--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Kihyun Park</title>
+    <meta name="description" content="Undergraduate Student, POSTECH">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <title>Kihyun Park's Page</title>
+    <link rel="stylesheet" type="text/css" media="screen">
   </head>
   
   <body>
