--- a/index.html
+++ b/index.html
@@ -10,11 +10,23 @@
   </head>
   
   <body>
-    <div id="container">
-      <div class="header">
-        Kihyun Park
+    <div id="nav">
+      Kihyun Park
+      <div class="nav-items">
+        <div class="nav-items">LinkedIn</div>
+        <div class="nav-items">GitHub</div>
+        <div class="nav-items">Instagram</div>
+      </div>
     </div>
-      <br>
-      <hr>
-  </body>
+
+    <div class="main">
+      <div class="title">
+        Kihyun Park's Page
+      </div>
+      <div class="subtitle">
+        I am an Undergraduate in Computer Science and Engineering at POSTECH.
+      </div>
+    </div>
+    
+    </body>
 </html>
