--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Kihyun Park's Page</title>
-    <link rel="stylesheet" type="text/css" media="screen">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   
   <body>
